# scalable-data-science

./: .bookignore  .gitignore  CONTRIBUTING.md  Gemfile  README  README.md  SUMMARY.md  UNLICENSE  _config.yml  book.json  index.html  index.md  research.md
MiddleEarth/: SUMMARY.md
_1x/: overview.md
_2x/: README.md  overview.md
_360-in-525/: 04.md  2018.md  2019.md  overview.md
_as/: 2019.md  ship-zip_tgz.sh
_data/: authors.yml  navigation.yml
_glm/: 2018.md
_in/: 2019.md  Dockerfile  Makefile  ship-zip_tgz.sh
_includes/: masthead.html
_infty/: 2018.md
_pages/: 404.md  about.md  contact.md  home.md  research.md  sds-archive.html
_sds/: 3.md  basics.md  research.md
_sds-1/: 6.md  README.md
_sds-2/: 2.md
archived/: Sadikov_parse_notebook.py
babel/: README.md  dbc2md.md  makeSDSGitbook.sh  makeZeppelinNotes.sh  parseMD.scala  parseMDPy.scala  scala2md.sh  texHunt.md  zeppelinInjectionCodes.txt
babel/pinot/: .gitignore  LICENSE  README.md  note.md  pinot.cabal  stack.yaml
babel/pinot/src/: Databricks.hs  Main.hs  Notebook.hs  Pandoc.hs  Utils.hs  Zeppelin.hs
basics/: README.md  setup_networking.md
book/: SUMMARY.md
books/: README.md  jupyterBook.md
datasets/: .gitignore
db/: Course_Overview.html  Course_Overview.scala  IntroScalaNotebooks.md  IntroScalaNotebooks.scala  sdsBlog.md  sdsBlog.scala
dbcArchives/: .gitignore
dev/: parse_md.py  parse_notebook.py
gb/: README.md  SUMMARY.md  SUMMARYBanished  dbcArchive.md
images/: README
jp/: README.md  sparktest.ipynb
libraries/: README.md
meme-evolution/: README.md  (+1 more)
(+3438 files in other folders)
